# daq-plot-qt

./: .gitignore  AbstractDevice.cpp  AbstractDevice.h  AbstractDeviceMonitor.cpp  AbstractDeviceMonitor.h  CMakeLists.txt  CMakePresets.json  DeviceEnums.h  DeviceMonitorFactory.cpp  DeviceMonitorFactory.h  Experiment.cpp  Experiment.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkDeviceMonitor.cpp  NetworkDeviceMonitor.h  Project.cpp  Project.h  README.md  SerialPortDeviceMonitor.cpp  SerialPortDeviceMonitor.h  main.cpp
